fix all the responsiveness of the dark mode (except the chatbot)

--- a/static/styles/certifications.css
+++ b/static/styles/certifications.css
@@ -130,3 +130,15 @@ html, body {
         grid-template-columns: 1fr;
     }
 }
+
+.footer {
+    text-align: center;
+    align-items: center;
+    background-color: var(--bg-color);
+}
+
+.footer p {
+    font-size: 13px;
+    color: var(--text-color);
+    font-weight: 400;
+}
